--- a/k8s-specifications/appdeployment.yaml
+++ b/k8s-specifications/appdeployment.yaml
@@ -2,21 +2,22 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: vote
-  name: vote
+    app: app
+  name: app
+  namespace: appredis
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: vote
+      app: app
   template:
     metadata:
       labels:
-        app: vote
+        app: app
     spec:
       containers:
-      - image: dockersamples/examplevotingapp_vote
-        name: vote
+      - image: ""
+        name: app
         ports:
         - containerPort: 80
-          name: vote
+          name: app
