--- a/k8s-specifications/appservice.yaml
+++ b/k8s-specifications/appservice.yaml
@@ -2,15 +2,16 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: vote
-  name: vote
+    app: app
+  name: app
+  namespace: appredis
 spec:
   type: NodePort
   ports:
-  - name: "vote-service"
-    port: 5000
+  - name: "app-service"
+    port: 3000
     targetPort: 80
     nodePort: 31002
   selector:
-    app: vote
+    app: app
   
