--- a/k8s-specifications/pythonappdeploy.yaml
+++ b/k8s-specifications/pythonappdeploy.yaml
@@ -2,22 +2,22 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: app
-  name: app
+    app: pythonapp
+  name: pythonapp
   namespace: multitier
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: app
+      app: pythonapp
   template:
     metadata:
       labels:
-        app: app
+        app: pythonapp
     spec:
       containers:
       - image: "381492261524.dkr.ecr.eu-west-1.amazonaws.com/nodeapp"
-        name: app
+        name: pythonapp
         ports:
         - containerPort: 80
-          name: app
+          name: pythonapp
