--- a/k8s-specifications/rbac.yaml
+++ b/k8s-specifications/rbac.yaml
@@ -14,7 +14,7 @@ data:
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  namespace: appredis
+  namespace: multitier
   name: pod-service-reader
 rules:
 - apiGroups: [""] # "" indicates the core API group
@@ -30,7 +30,7 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: pod-service-reader-binding
-  namespace: appredis
+  namespace: multitier
 subjects:
 - kind: User
   name: devlopers
