--- a/k8s-specifications/redis-deployment.yaml
+++ b/k8s-specifications/redis-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: redis
   name: redis
-  namespace: appredis
+  namespace: multitier
 spec:
   replicas: 1
   selector:
