--- a/k8s-specifications/springbootappdep.yaml
+++ b/k8s-specifications/springbootappdep.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: springapp
   name: springapp
-  namespace: appredis
+  namespace: multitier
 spec:
   replicas: 2
   selector:
@@ -16,7 +16,7 @@ spec:
         app: springapp
     spec:
       containers:
-      - image: ""
+      - image: "381492261524.dkr.ecr.eu-west-1.amazonaws.com/springapp"
         name: springapp
         ports:
         - containerPort: 6868
