--- a/k8s-specifications/appdeployment.yaml
+++ b/k8s-specifications/appdeployment.yaml
@@ -6,7 +6,7 @@ metadata:
   name: app
   namespace: multitier
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: app
@@ -16,7 +16,7 @@ spec:
         app: app
     spec:
       containers:
-      - image: "381492261524.dkr.ecr.eu-west-1.amazonaws.com/nodeapp"
+      - image: "381492261524.dkr.ecr.eu-west-1.amazonaws.com/nodeapp:latest"
         name: app
         ports:
         - containerPort: 80
