--- a/k8s-specifications/pythonappdeploy.yaml
+++ b/k8s-specifications/pythonappdeploy.yaml
@@ -6,7 +6,7 @@ metadata:
   name: pythonapp
   namespace: multitier
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: pythonapp
@@ -16,7 +16,7 @@ spec:
         app: pythonapp
     spec:
       containers:
-      - image: "381492261524.dkr.ecr.eu-west-1.amazonaws.com/nodeapp"
+      - image: "381492261524.dkr.ecr.eu-west-1.amazonaws.com/pythonapp:latest"
         name: pythonapp
         ports:
         - containerPort: 80
