--- a/k8s-specifications/appdeployment.yaml
+++ b/k8s-specifications/appdeployment.yaml
@@ -18,6 +18,8 @@ spec:
       containers:
       - image: "381492261524.dkr.ecr.eu-west-1.amazonaws.com/nodeapp:latest"
         name: app
+      imagePullSecrets:
+      - name: ecr-secret  
         ports:
         - containerPort: 80
           name: app
