--- a/k8s-specifications/pythonappdeploy.yaml
+++ b/k8s-specifications/pythonappdeploy.yaml
@@ -18,6 +18,8 @@ spec:
       containers:
       - image: "381492261524.dkr.ecr.eu-west-1.amazonaws.com/pythonapp:latest"
         name: pythonapp
+      imagePullSecrets:
+      - name: ecr-secret  
         ports:
         - containerPort: 80
           name: pythonapp
