--- a/k8s-specifications/appdeployment.yaml
+++ b/k8s-specifications/appdeployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: app
     spec:
       containers:
-      - image: "381492261524.dkr.ecr.eu-west-1.amazonaws.com/nodeapp:latest"
+      - image: "381492261524.dkr.ecr.eu-west-1.amazonaws.com/nodeapp"
         name: app
         ports:
         - containerPort: 3000
